tests/snapshots/examples_basics/fibonacci.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/fibonacci.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
