tests/snapshots/examples_basics/list_basic.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/list_basic.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/basics/list_basic.flx:55:11
   |
55 |     print(rest(to_list(my_array)));
   |           ^^^^

Hint:
  Define it first: let rest = ...;


error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/basics/list_basic.flx:61:11
   |
61 |     print(first(xs))
   |           ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `rest`.

  examples/basics/list_basic.flx:62:11
   |
62 |     print(rest(xs))
   |           ^^^^

Hint:
  Define it first: let rest = ...;


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/basics/list_basic.flx:80:11
   |
80 |     print(reverse(xs))
   |           ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E004]: Undefined Variable

I can't find a value named `contains`.

  examples/basics/list_basic.flx:83:11
   |
83 |     print(contains(xs, 2))
   |           ^^^^^^^^

Hint:
  Define it first: let contains = ...;


error[E004]: Undefined Variable

I can't find a value named `contains`.

  examples/basics/list_basic.flx:84:11
   |
84 |     print(contains(xs, 9))
   |           ^^^^^^^^

Hint:
  Define it first: let contains = ...;

Found 6 errors.
== stdout ==
<not executed>
