tests/snapshots/examples_basics/list_comprehension.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/list_comprehension.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: Flux IR lowering fallback

unsupported infix operator

  examples/basics/list_comprehension.flx:13:27
   |
13 |     print([x | x <- nums, x % 2 == 0])
   |                           ^^^^^
== stdout ==
<not executed>
