tests/snapshots/examples_basics/pipe_operator.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/pipe_operator.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode call target binding
== stdout ==
<not executed>
